--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
+    "nodemailer": "^6.10.1",
     "socket.io": "^4.8.1",
     "ws": "^8.18.1"
   }
