--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "nodemailer": "^6.10.1",
+    "pokersolver": "^2.1.4",
     "socket.io": "^4.8.1",
     "ws": "^8.18.1"
   }
