--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "nodemailer": "^6.10.1",
+    "poker-evaluator": "^2.1.0",
+    "poker-hand-evaluator": "^1.0.1",
     "pokersolver": "^2.1.4",
     "socket.io": "^4.8.1",
     "ws": "^8.18.1"
